--- a/index.html
+++ b/index.html
@@ -3,15 +3,118 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Project 01</title>
   </head>
-  <body></body>
+  <body style="height: 10000px">
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body-header">
+          <!-- logo -->
+          <img src="./assets/img/Lesson..svg" alt="" />
+          <!-- nav -->
+          <nav class="nav">
+            <ul>
+              <li class="active">
+                <a href="#!">Home</a>
+              </li>
+              <li>
+                <a href="#!">Courses</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Reviews</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- button -->
+          <div class="action">
+            <a href="#!" class="btn btn-sign-up">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="hero">
+      <div class="main-content">
+        <div class="body-hero">
+          <!-- khối bên trái -->
+          <div class="media-block">
+            <!-- ảnh lớn  -->
+            <img
+              src="./assets/img/guy-lesson 1 .jpg"
+              class="big-image"
+              alt="anh_to"
+            />
+            <!-- ảnh nhỏ  -->
+            <div class="mini-table-content">
+              <div class="mini-table">
+                <div class="mini-media">
+                  <div class="icon icon1">
+                    <img src="./assets/Icon/icon1.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+                <div class="mini-media">
+                  <div class="icon icon2">
+                    <img src="./assets/Icon/icon2.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+                <div class="mini-media">
+                  <div class="icon icon3">
+                    <img src="./assets/Icon/icon3.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- khối bên phải  -->
+          <div class="content-block">
+            <h1 class="h1-content">
+              Learn without limits and spread knowledge.
+            </h1>
+            <p class="p-content">
+              Build new skills for that “this is my year” feeling with courses,
+              certificates, and degrees from world-class universities and
+              companies.
+            </p>
+            <div class="btn-icon">
+              <a href="#!" class="btn btn-buttom-conten_block">See Courses</a>
+              <button class="What-video">
+                <div class="icon">
+                  <img src="./assets/Icon/play.svg" alt="" />
+                </div>
+              </button>
+              <div>
+                <span>Watch Video</span>
+              </div>
+            </div>
+            <p class="p-content recent">Recent engagement</p>
+            <p class="p-content end-text">
+              <strong>50K</strong>Students <strong>70K</strong>Courses
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
