--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <!-- khối bên phải  -->
           <div class="content-block">
-            <h1 class="h1-content">
+            <h1 class="h-content">
               Learn without limits and spread knowledge.
             </h1>
             <p class="p-content">
@@ -116,5 +116,124 @@
         </div>
       </div>
     </main>
+    <!-- popular -->
+    <div class="popular">
+      <div class="main-content">
+        <!-- popular bên trên  -->
+        <div class="popular-top">
+          <!-- phần bên trái  -->
+          <div class="left-popular-top">
+            <h2 class="h2-content">Our popular courses</h2>
+            <p class="p-content">
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+          </div>
+          <!-- phần bên phải  -->
+          <div class="right-popular-top">
+            <div class="button-popular">
+              <button class="btn-popular btn-1">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="CurrentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="btn-popular btn-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="CurrentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- phần popular dưới  -->
+        <div class="popular-bottom">
+          <!-- item 1 -->
+          <div class="course-item">
+            <img src="./assets/img/popular-1.jpg" alt="" class="thumb" />
+            <div class="info">
+              <div class="head">
+                <h3 class="title">Basic web design</h3>
+                <div class="rating">
+                  <img src="./assets/Icon/Star.svg" alt="" class="star" />
+                  <span class="value">4.5</span>
+                </div>
+              </div>
+              <div class="p-content">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </div>
+              <div class="foot">
+                <span class="giaban">$120.75</span>
+                <div class="btn btn-foot">Book Now</div>
+              </div>
+            </div>
+          </div>
+          <!-- item2 -->
+          <div class="course-item">
+            <img src="./assets/img/popular-2.jpg" alt="" class="thumb" />
+            <div class="info">
+              <div class="head">
+                <h3 class="title">UI/UX design</h3>
+                <div class="rating">
+                  <img src="./assets/Icon/Star.svg" alt="" class="star" />
+                  <span class="value">4.5</span>
+                </div>
+              </div>
+              <div class="p-content">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </div>
+              <div class="foot">
+                <span class="giaban">$120.75</span>
+                <div class="btn btn-foot">Book Now</div>
+              </div>
+            </div>
+          </div>
+          <!-- item3 -->
+          <div class="course-item">
+            <img src="./assets/img/popular-3.jpg" alt="" class="thumb" />
+            <div class="info">
+              <div class="head">
+                <h3 class="title">Web App design</h3>
+                <div class="rating">
+                  <img src="./assets/Icon/Star.svg" alt="" class="star" />
+                  <span class="value">4.5</span>
+                </div>
+              </div>
+              <div class="p-content">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </div>
+              <div class="foot">
+                <span class="giaban">$120.75</span>
+                <div class="btn btn-foot">Book Now</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
