--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
             <img src="./assets/img/popular-1.jpg" alt="" class="thumb" />
             <div class="info">
               <div class="head">
-                <h3 class="title">Basic web design</h3>
+                <h3 class="title line-clamp break-all">Basic web design</h3>
                 <div class="rating">
                   <img src="./assets/Icon/Star.svg" alt="" class="star" />
                   <span class="value">4.5</span>
                 </div>
               </div>
-              <div class="p-content">
+              <div class="p-content line-clamp line-2 break-all">
                 Get the best course, gain knowledge and shine for your future
                 career.
               </div>
@@ -195,13 +195,13 @@
             <img src="./assets/img/popular-2.jpg" alt="" class="thumb" />
             <div class="info">
               <div class="head">
-                <h3 class="title">UI/UX design</h3>
+                <h3 class="title line-clamp break-all">UI/UX design</h3>
                 <div class="rating">
                   <img src="./assets/Icon/Star.svg" alt="" class="star" />
                   <span class="value">4.5</span>
                 </div>
               </div>
-              <div class="p-content">
+              <div class="p-content line-clamp line-2 break-all">
                 Get the best course, gain knowledge and shine for your future
                 career.
               </div>
@@ -216,13 +216,13 @@
             <img src="./assets/img/popular-3.jpg" alt="" class="thumb" />
             <div class="info">
               <div class="head">
-                <h3 class="title">Web App design</h3>
+                <h3 class="title line-clamp break-all">Web App design</h3>
                 <div class="rating">
                   <img src="./assets/Icon/Star.svg" alt="" class="star" />
                   <span class="value">4.5</span>
                 </div>
               </div>
-              <div class="p-content">
+              <div class="p-content line-clamp line-2 break-all">
                 Get the best course, gain knowledge and shine for your future
                 career.
               </div>
@@ -231,6 +231,87 @@
                 <div class="btn btn-foot">Book Now</div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- feedback -->
+    <div class="feedback">
+      <div class="main-content">
+        <div class="feedback-list">
+          <!-- item1 -->
+          <div class="feedback-item">
+            <!-- khối bên trái  -->
+            <div class="infor">
+              <img src="./assets/img/avt-fb.svg" alt="" class="avatar" />
+              <p class="name">Peter Moor</p>
+              <p class="tile-name">Student of Web Design</p>
+              <div class="dots">
+                <span class="dot"></span>
+                <span class="dot active"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+            <!-- khối bên phải  -->
+            <div class="content">
+              <div class="img-quotes">
+                <img src="./assets/Icon/note.svg" alt="" />
+              </div>
+              <block-quotes
+                >Not only does my resume look impressive—filled with the names
+                and logos of world-class institutions—but these certificates
+                also bring me closer to my career goals by validating the skills
+                I've learned."
+              </block-quotes>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- features  -->
+    <div class="features">
+      <div class="main-content">
+        <div class="body-features">
+          <!-- khối hình ảnh bên trái  -->
+          <div class="image-features">
+            <img src="./assets/img/features-1.jpg" alt="" class="lower" />
+            <img src="./assets/img/features-2.jpg" alt="" />
+          </div>
+          <!-- khối nội dung bên phải  -->
+          <div class="content-features">
+            <h2 class="h2-content">
+              Learner outcomes through our awesome platform
+            </h2>
+            <p class="p-content">
+              87% of people learning for professional development report career
+              benefits like getting a promotion, a raise, or starting a new
+              career.
+            </p>
+            <p class="p-content">Lesson Impact Report (2022)</p>
+            <a href="#!" class="btn btn-features">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- features-2  -->
+    <div class="features f2nd">
+      <div class="main-content">
+        <div class="body-features">
+          <!-- khối hình ảnh bên trái  -->
+          <div class="image-features-f2nd">
+            <img src="./assets/img/img-2nd.svg" alt="" />
+          </div>
+          <!-- khối nội dung bên phải  -->
+          <div class="content-features c2nd">
+            <h2 class="h2-content">
+              Take the next step toward your personal and professional goals
+              with Lesson.
+            </h2>
+            <p class="p-content">
+              Take the next step toward. Join now to receive personalized and
+              more recommendations from the full Coursera catalog.
+            </p>
+            <a href="#!" class="btn btn-features">Join Now</a>
           </div>
         </div>
       </div>
